# track

./: .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yaml  package-lock.json  test.http
.github/workflows/: audit.yml  general.yml
benches/: api.rs  util.rs
config/: config.dev.yaml  config.prod.yaml  config.test.yaml
migrations/: 20231119075636_create_user_table.sql  20231122063641_add_new_user_columns.sql  20231122064145_make_nickname_nullable.sql  20231122071347_make_commont_nullable.sql
src/: app.rs  lib.rs  main.rs
src/auth/: mod.rs
src/configuration/: application.rs  auth.rs  database.rs  environment.rs  error.rs  jaeger.rs  mod.rs  scheme.rs
src/database/: client.rs  error.rs  init.rs  mod.rs
src/domain/: mod.rs  user.rs
src/domain/user/: dto.rs  mod.rs
src/domain/user/actions/: delete.rs  get_one.rs  mod.rs  signin.rs  signup.rs  update_user.rs
src/error/: mod.rs
src/middleware/: auth.rs  mod.rs
src/routes/: error.rs  mod.rs
src/routes/private/: close_account.rs  get_user.rs  mod.rs  my_user.rs  patch_user.rs
src/routes/public/: health.rs  mod.rs  signin.rs  signup.rs
src/telemetry/: mod.rs
tests/: main.rs  util.rs
tests/routes/: mod.rs
tests/routes/private/: delete_user.rs  get_user.rs  mod.rs  update_user.rs
tests/routes/public/: health.rs  mod.rs  signin.rs  signup.rs
utilities/: Cargo.toml
utilities/src/: dummy.rs  lib.rs  spawn.rs  telemetry.rs  test_app.rs
