[package]
name = "track_api_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", default-features = false, features = [
    "rustls-0_21",
    "macros",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
] }
actix-web-httpauth = { version = "0.8.1", default-features = false }
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
argon2 = { version = "0.5.2", default-features = false, features = [
    "password-hash",
    "alloc",
] }
chrono = { version = "0.4.31", default-features = false }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
dotenv = { version = "0.15.0", default-features = false }
jsonwebtoken = { version = "9.1.0", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
opentelemetry = { version = "0.21.0", default-features = false, features = [] }
opentelemetry-otlp = { version = "0.14.0", default-features = false, features = [
    "grpc-tonic",
    "trace",
] }
opentelemetry_sdk = { version = "0.21.1", default-features = false, features = [
    "rt-tokio-current-thread",
] }
secrecy = { version = "0.8.0", default-features = false, features = [
    "alloc",
    "serde",
] }
serde = { version = "1.0.192", default-features = false, features = [
    "serde_derive",
] }
serde_json = { version = "1.0.108", default-features = false }
sqlx = { version = "0.7.2", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "uuid",
    "macros",
    "chrono",
    "json",
] }
thiserror = { version = "1.0.50", default-features = false }
tracing = { version = "0.1.40", default-features = false }
tracing-actix-web = { version = "0.7.9", default-features = false }
tracing-log = { version = "0.2.0", default-features = false }
tracing-opentelemetry = { version = "0.22.0", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.0", default-features = false, features = ["serde"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rush_data_server_bin"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
    "tokio",
    "async_tokio",
] }
utilities = { path = "utilities" }

[[bench]]
name = "api"
harness = false
