[package]
name = "utilities"
version = "0.1.0"
edition = "2021"
description = "A set of test utilities that are shared between integration tests and benchmarks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
track_api_challenge = { path = "../" }
fake = "2.9.1"
base64 = "0.21.5"

[dev-dependencies]
